--- a/app/src/main/res/layout/activity_lista_chat.xml
+++ b/app/src/main/res/layout/activity_lista_chat.xml
@@ -28,10 +28,14 @@
             android:id="@+id/btCrearChat"
             android:layout_alignParentRight="true"
             android:tint="#ffffffff"
-            android:padding="7dp"
+            android:padding="12dp"
             android:scaleType="fitCenter"
             android:background="@drawable/menubutton"
-            android:layout_marginRight="40dp" />
+            android:layout_marginRight="40dp"
+            android:paddingLeft="7dp"
+            android:paddingTop="7dp"
+            android:paddingRight="7dp"
+            android:paddingBottom="7dp" />
         <TextView
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="match_parent"
@@ -64,7 +68,7 @@
             android:id="@+id/btVerContactos"
             android:layout_alignParentRight="true"
             android:tint="#ffffffff"
-            android:padding="7dp"
+            android:padding="12dp"
             android:scaleType="fitCenter"
             android:background="@drawable/menubutton"
             android:layout_marginRight="84dp" />
