--- a/app/src/main/res/layout/lista_contactos.xml
+++ b/app/src/main/res/layout/lista_contactos.xml
@@ -28,7 +28,7 @@
             android:id="@+id/btAgregarContacto"
             android:layout_alignParentRight="true"
             android:tint="#ffffffff"
-            android:padding="12dp"
+            android:padding="7dp"
             android:scaleType="fitCenter"
             android:background="@drawable/menubutton"
             android:layout_marginRight="40dp" />
@@ -58,6 +58,11 @@
             android:paddingRight="8dp"
             android:paddingLeft="8dp" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></LinearLayout>
 
     <ListView
         android:id="@+id/listviewcontact"
